# coxswain

./: LICENSE  README.md
coxswain/: ANNOTATED_BIBLIOGRAPHY  PossibleGHCBug.hs  coxswain.cabal  trim.awk
coxswain/src/: Articulation.hs  Col.hs  Coxswain.hs  E.hs  GHCAPI.hs  KnownNat16.hs  Lacks.hs  LowLevel.hs  MiniSYB.hs  NormalForms.hs  Plugin.hs  Reduce.hs  Simplify.hs  SimplifyGivens.hs  SimplifyPreds.hs  SimplifyWanteds.hs  WorkingCt.hs  ZonkGivens.hs
coxswain/test/: Main.hs  README
coxswain/test/ill-typed/: T0.hs  T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs  T7.hs  T8.hs  T9.hs  T9999.hs
coxswain/test/well-typed/: T0.hs  T1.hs  T10.hs  T11.hs  T12.hs  T13.hs  T14.hs  T15.hs  T16.hs  T17.hs  T18.hs  T6.hs  T7.hs  T8.hs  T9.hs  T9998.hs
sculls/: Elm.hs  Examples.hs  SPJ.hs  sculls.cabal
sculls/src/Data/: Sculls.hs
sculls/src/Data/Sculls/: Field.hs  Record.hs  Symbol.hs  Variant.hs
sculls/src/Data/Sculls/Internal/: Classes.hs  RecordAndVariant.hs  RecordAndVariantTH.hs  ShortVector.hs  ShortVectorTH.hs  Shower.hs  TH.hs
